--- a/src/main/resources/com/example/jewelchase230/main-menu.fxml
+++ b/src/main/resources/com/example/jewelchase230/main-menu.fxml
@@ -1,11 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
 <VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.jewelchase230.MainMenu">
    <children>
-      <Button mnemonicParsing="false" onMouseClicked="#onStartGamePressed" text="Start Game" />
-      <Button mnemonicParsing="false" onMouseClicked="#onSwitchMenuPressed" text="Switch Menu" />
+      <Label text="Jewel Chase">
+         <font>
+            <Font name="Franklin Gothic Medium Italic" size="45.0" />
+         </font>
+         <VBox.margin>
+            <Insets bottom="45.0" />
+         </VBox.margin>
+      </Label>
+      <Button centerShape="false" mnemonicParsing="false" onMouseClicked="#onStartGamePressed" text="Start Game">
+         <VBox.margin>
+            <Insets bottom="10.0" />
+         </VBox.margin></Button>
+      <Button alignment="CENTER" centerShape="false" mnemonicParsing="false" onMouseClicked="#onSettingsMenuPressed" text="Settings" />
+      <Button alignment="CENTER" centerShape="false" mnemonicParsing="false" onMouseClicked="#onHighScoreTablePressed" text="High Score">
+         <VBox.margin>
+            <Insets top="10.0" />
+         </VBox.margin>
+      </Button>
+      <Button alignment="CENTER" centerShape="false" mnemonicParsing="false" onMouseClicked="#onSwitchMenuPressed" text="Exit">
+         <VBox.margin>
+            <Insets top="10.0" />
+         </VBox.margin>
+      </Button>
    </children>
 </VBox>
