--- a/src/main/resources/com/example/jewelchase230/settings-menu.fxml
+++ b/src/main/resources/com/example/jewelchase230/settings-menu.fxml
@@ -2,7 +2,9 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
@@ -17,29 +19,45 @@
             <Insets bottom="10.0" />
          </VBox.margin>
       </Label>
-      <Label text="Music">
-         <VBox.margin>
-            <Insets bottom="10.0" top="20.0" />
-         </VBox.margin>
-      </Label>
-      <Slider maxWidth="-Infinity" prefHeight="15.0" prefWidth="300.0" value="100.0">
-         <VBox.margin>
-            <Insets />
-         </VBox.margin>
-         <padding>
-            <Insets left="10.0" right="10.0" />
-         </padding>
-      </Slider>
-      <Label text="SFX">
-         <VBox.margin>
-            <Insets bottom="10.0" top="20.0" />
-         </VBox.margin>
-      </Label>
-      <Slider maxWidth="-Infinity" prefHeight="15.0" prefWidth="300.0" value="100.0">
-         <padding>
-            <Insets left="10.0" right="10.0" />
-         </padding>
-      </Slider>
+      <ScrollPane fitToHeight="true" fitToWidth="true" prefHeight="200.0" prefWidth="410.0">
+         <content>
+            <VBox alignment="CENTER">
+               <children>
+                  <Label text="Music">
+                     <VBox.margin>
+                        <Insets bottom="10.0" top="20.0" />
+                     </VBox.margin>
+                  </Label>
+                  <Slider fx:id="music" maxWidth="-Infinity" prefHeight="15.0" prefWidth="300.0" showTickLabels="true" showTickMarks="true" value="100.0">
+                     <VBox.margin>
+                        <Insets />
+                     </VBox.margin>
+                     <padding>
+                        <Insets left="10.0" right="10.0" />
+                     </padding>
+                  </Slider>
+                  <Label text="SFX">
+                     <VBox.margin>
+                        <Insets bottom="10.0" top="20.0" />
+                     </VBox.margin>
+                  </Label>
+                  <Slider fx:id="sfx" maxWidth="-Infinity" prefHeight="15.0" prefWidth="300.0" showTickLabels="true" showTickMarks="true" value="100.0">
+                     <padding>
+                        <Insets left="10.0" right="10.0" />
+                     </padding>
+                  </Slider>
+                  <CheckBox fx:id="fullScreen" mnemonicParsing="false" text="Full Screen">
+                     <VBox.margin>
+                        <Insets bottom="15.0" top="20.0" />
+                     </VBox.margin>
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                  </CheckBox>
+               </children>
+            </VBox>
+         </content>
+      </ScrollPane>
       <Button mnemonicParsing="false" onMouseClicked="#onBackPressed" text="Back">
          <VBox.margin>
             <Insets top="30.0" />
