Added an exit button to the pause menu

--- a/src/main/resources/com/example/jewelchase230/pause-menu.fxml
+++ b/src/main/resources/com/example/jewelchase230/pause-menu.fxml
@@ -21,7 +21,8 @@
             <Insets bottom="10.0" />
          </VBox.margin></Button>
       <Button alignment="CENTER" centerShape="false" mnemonicParsing="false" onMouseClicked="#onSettingsMenuPressed" text="Settings" />
-      <Button alignment="CENTER" centerShape="false" mnemonicParsing="false" onMouseClicked="#onHighScoreTablePressed" text="High Score">
+      <Button alignment="CENTER" centerShape="false" mnemonicParsing="false" onMouseClicked="#onHighScoreTablePressed" text="High Score" />
+      <Button alignment="CENTER" centerShape="false" mnemonicParsing="fale" onMouseClicked="#onExitPressed" text="Exit" />
          <VBox.margin>
             <Insets top="10.0" />
          </VBox.margin>
