--- a/src/main/resources/com/example/jewelchase230/pause-menu.fxml
+++ b/src/main/resources/com/example/jewelchase230/pause-menu.fxml
@@ -1,13 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
 <VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.jewelchase230.menus.PauseMenu">
    <children>
-      <Button mnemonicParsing="false" onMouseClicked="#onResumeGamePressed" text="Resume" />
-      <Button mnemonicParsing="false" onMouseClicked="#onSettingsMenuPressed" text="Settings" />
-      <Button mnemonicParsing="false" onMouseClicked="#onHighScoreTablePressed" text="HighScores" />
-      <Button mnemonicParsing="false" onMouseClicked="#onExitPressed" text="Exit" />
+      <Label text="Game Paused">
+         <font>
+            <Font name="Franklin Gothic Medium Italic" size="45.0" />
+         </font>
+      </Label>
+      <Button mnemonicParsing="false" onMouseClicked="#onResumeGamePressed" text="Resume">
+         <VBox.margin>
+            <Insets top="20.0" />
+         </VBox.margin></Button>
+      <Button mnemonicParsing="false" onMouseClicked="#onSettingsMenuPressed" text="Settings">
+         <VBox.margin>
+            <Insets top="15.0" />
+         </VBox.margin>
+      </Button>
+      <Button mnemonicParsing="false" onMouseClicked="#onHighScoreTablePressed" text="HighScores">
+         <VBox.margin>
+            <Insets top="15.0" />
+         </VBox.margin>
+      </Button>
+      <Button mnemonicParsing="false" onMouseClicked="#onExitPressed" text="Exit">
+         <VBox.margin>
+            <Insets top="15.0" />
+         </VBox.margin>
+      </Button>
    </children>
 </VBox>
