HighScoreMenu looks nicer

--- a/src/main/resources/com/example/jewelchase230/highScore-table.fxml
+++ b/src/main/resources/com/example/jewelchase230/highScore-table.fxml
@@ -6,10 +6,11 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.jewelchase230.menus.HighScoreMenu">
+<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.jewelchase230.menus.HighScoreMenu">
    <children>
       <Label alignment="TOP_CENTER" text="High scores" underline="true">
          <font>
@@ -31,11 +32,15 @@
             <TableColumn prefWidth="340.0" text="High Score" />
         </columns>
       </TableView>
-      <Button fx:id="prevLevelButton" mnemonicParsing="false" onMouseClicked="#onPrevLevelButtonPressed" text="&lt;- Previous Level" />
-      <Button fx:id="nextLevelButton" mnemonicParsing="false" onMouseClicked="#onNextLevelButtonPressed" text="Next Level -&gt;" />
+      <Pane prefHeight="36.0" prefWidth="600.0">
+         <children>
+            <Button fx:id="prevLevelButton" layoutX="185.0" layoutY="6.0" mnemonicParsing="false" onMouseClicked="#onPrevLevelButtonPressed" text="&lt;- Previous Level" />
+            <Button fx:id="nextLevelButton" layoutX="307.0" layoutY="6.0" mnemonicParsing="false" onMouseClicked="#onNextLevelButtonPressed" prefHeight="25.0" prefWidth="107.0" text="Next Level -&gt;" />
+         </children>
+      </Pane>
       <Button mnemonicParsing="false" onMouseClicked="#onBackPressed" text="Back">
          <VBox.margin>
-            <Insets top="30.0" />
+            <Insets top="10.0" />
          </VBox.margin></Button>
    </children>
 </VBox>
